<resources>
    <string name="app_name">jsleep-android</string>
    <string name="username">Username</string>
    <string name="jsleep">JSLEEP</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_now">Register Now!</string>
    <string name="password_regis">Password</string>
    <string name="email_regis">Email</string>
    <string name="name_regis">Name</string>
    <string name="register">REGISTER</string>
    <string name="hello_user">Hello User!</string>
    <string name="account_details">Account Details</string>
    <string name="account">Account</string>
    <string name="amount">Amount</string>
    <string name="top_up">top up</string>
    <string name="balance">Balance</string>
    <string name="_0_0">0.0</string>
    <string name="email">Email</string>
    <string name="stefan">Stefan</string>
    <string name="name">Name</string>
    <string name="stefanhutapea_gmail_com">stefanhutapea@gmail.com</string>
    <string name="register_renter">Register Renter</string>
    <string name="namerenter">Name</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">cancel</string>
    <string name="register_aboutme">register</string>
    <string name="nameRegister">Name</string>
    <string name="name_renter">Name</string>
    <string name="address_renter">Address</string>
    <string name="phone_number_renter">Phone Number</string>
    <string name="address_reg">Address</string>
    <string name="name_create">Name</string>
</resources>